# 3D-connect4

./: README.md  ScoreFour.ipynb  pyproject.toml
agents/: abstract_agent.py  dqn_enemy_agent.py  dqn_player_agent.py  dqn_replay_buffer.py
apps/: main.py
envs/: 3d_connect_n.py  three_d_connect_n.py  utility.py
final/: README.md
final/agents/: dqn_player_agent.py  dqn_replay_buffer.py
final/apps/: main.py
final/envs/: utility.py
final/net/: dqn_cnn_network.py  dqn_mlp_network.py
logs/20210309-130400/: for_record.ipynb
logs/20210309-130400/weights/: weights_18000episodes.pth  weights_28000episodes.pth  weights_32000episodes.pth  weights_36000episodes.pth  weights_48000episodes.pth
logs/20210309-203653/: result.md
logs/20210309-203653/weights/: weights_10000episodes.pth  weights_12000episodes.pth  weights_14000episodes.pth  weights_22000episodes.pth  weights_34000episodes.pth  weights_36000episodes.pth  weights_38000episodes.pth  weights_46000episodes.pth  weights_50000episodes.pth
logs/20210310-122046/: result.md
logs/20210310-122046/weights/: weights_2000episodes.pth  weights_24000episodes.pth  weights_28000episodes.pth  weights_30000episodes.pth  weights_42000episodes.pth  weights_48000episodes.pth  weights_6000episodes.pth  weights_8000episodes.pth
logs/20210319-145437/: result.md
logs/20210401-055249/weights/: episode_10000.pth  episode_1200.pth  episode_1600.pth  episode_2000.pth  episode_2400.pth  episode_2800.pth  (+19 more)
logs/template/: for_record.ipynb  result.md
trainers/: abstract_trainer.py  dqn_trainer.py
trial/: ScoreFour.ipynb
(+63 files in other folders)
