[tool.poetry]
name = "3D-connectN"
version = "1.00"
description = ""
authors = ["Yoshiki Kubotani <yoshikikubotani.lab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gym = "0.17.3"
matplotlib = "3.2.2"
numpy = "^1.20.2"
plotly = "4.4.1"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
